--- a/ayyappa.properties
+++ b/ayyappa.properties
@@ -1,1 +1,7 @@
-
+server.port=4343
+server.servlet.context-path=/CallDetailsApi
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/world
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
